--- a/Phonebook/Phoneebook.Tests/Phoneebook.Tests.csproj
+++ b/Phonebook/Phoneebook.Tests/Phoneebook.Tests.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
@@ -106,11 +107,21 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver, Version=2.52.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.2.52.0\lib\net40\WebDriver.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=2.52.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.2.52.0\lib\net40\WebDriver.Support.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebUI.Tests\Controllers\HomeControllerTest.cs" />
     <Compile Include="WebUI.Tests\Routings\RoutingTest.cs" />
+    <Compile Include="WebUI.Tests\UI\PhonbookIndexPOMTest.cs" />
+    <Compile Include="WebUI.Tests\UI\PhonebookIndexPOM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
