--- a/Phonebook/Phoneebook.Tests/packages.config
+++ b/Phonebook/Phoneebook.Tests/packages.config
@@ -8,4 +8,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="NUnit" version="3.0.1" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
+  <package id="Selenium.Support" version="2.52.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="2.52.0" targetFramework="net452" />
 </packages>
